if (CMAKE_BUILD_TYPE STREQUAL "Debug")
#add_subdirectory(testpage)
endif (CMAKE_BUILD_TYPE STREQUAL "Debug")

add_subdirectory(textPage)
add_subdirectory(themePage)
add_subdirectory(writingGamesPageToolbox)
add_subdirectory(favoritesProjectToolbox)
#add_subdirectory(welcomewindow)
#add_subdirectory(writewindow)
